pruned the homepage, scaffolding new navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,1 +1,58 @@
-<navbar></navbar>
+<navbar>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">RESOURCES <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="resources/adult-mouse-penis-3d/">Adult Mouse Penis Atlas</a></li>
+              <li><a href="resources/genital-tubercule-atlas/">Mouse Tubercle Atlas</a></li>
+              <li><a href="resources/ontology/">Ontology</a></li>
+              <li><a href="resources/theiler-stages/">Cross-reference Theiler Stages</a></li>
+              <li><a href="resources/tools/">Community Tools</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TUTORIALS <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="tutorials/kidney-dev/">Kidney Development (Human/Mouse)</a></li>
+              <li><a href="tutorials/innervation/">LUT Innervation Development (Mouse)</a></li>
+              <li><a href="tutorials/prostate-dev/">Prostate Development (Mouse)</a></li>
+              <li><a href="tutorials/urogenital-dev/">Urogenital Development (Mouse)</a></li>
+              <li><a href="tutorials/void-assay/">Micturition Assessment (Mouse)</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONSORTIUM <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="gudmap/">GUDMAP</a></li>
+              <li><a href="rebuildingakidney/">ReBuilding A Kidney (RBK)</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="about/">What is ATLAS-D2K?</a></li>
+              <li><a href="publications/">Publications</a></li>
+              <li><a href="news/">News</a></li>
+            </ul>
+          </li>
+        </ul>
+
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+</navbar>
