--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -112,6 +112,4 @@
   </head>
   <body>
     <div id="wrap">
-      <navbar>
-          <img src="/assets/img/atlas-logo-inverted.png" alt="" style="width:120px;height:83px;margin-top:10px;margin-left:20px;">
-      </navbar>
+      {% include navbar.html %}
