Converted navbar to static with limited menu items.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,22 +1,23 @@
 <navbar>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
+  <nav class="navbar navbar-inverse">
+
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-btn" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="/">
+        <span id="brand-text">ATLAS-D2K</span></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse" id="navbar-collapse-btn">
         <ul class="nav navbar-nav">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">RESOURCES <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="resources/adult-mouse-penis-3d/">Adult Mouse Penis Atlas</a></li>
               <li><a href="resources/genital-tubercule-atlas/">Mouse Tubercle Atlas</a></li>
@@ -26,7 +27,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TUTORIALS <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="tutorials/kidney-dev/">Kidney Development (Human/Mouse)</a></li>
               <li><a href="tutorials/innervation/">LUT Innervation Development (Mouse)</a></li>
@@ -36,14 +37,14 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONSORTIUM <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Consortiums <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="gudmap/">GUDMAP</a></li>
               <li><a href="rebuildingakidney/">ReBuilding A Kidney (RBK)</a></li>
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="about/">What is ATLAS-D2K?</a></li>
               <li><a href="publications/">Publications</a></li>
@@ -53,6 +54,6 @@
         </ul>
 
       </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+
   </nav>
 </navbar>
