--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -64,6 +64,6 @@
 		try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
 		catch(e){window.attachEvent("onload", $buo_f)}
 </script>
-
+<script src="/assets/js/bootstrap.min.js"></script>
 </body>
 </html>
