--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,36 +19,36 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="resources/adult-mouse-penis-3d/">Adult Mouse Penis Atlas</a></li>
-              <li><a href="resources/genital-tubercule-atlas/">Mouse Tubercle Atlas</a></li>
-              <li><a href="resources/ontology/">Ontology</a></li>
-              <li><a href="resources/theiler-stages/">Cross-reference Theiler Stages</a></li>
-              <li><a href="resources/tools/">Community Tools</a></li>
+              <li><a href="/resources/adult-mouse-penis-3d/">Adult Mouse Penis Atlas</a></li>
+              <li><a href="/resources/genital-tubercule-atlas/">Mouse Tubercle Atlas</a></li>
+              <li><a href="/resources/ontology/">Ontology</a></li>
+              <li><a href="/resources/theiler-stages/">Cross-reference Theiler Stages</a></li>
+              <li><a href="/resources/tools/">Community Tools</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="tutorials/kidney-dev/">Kidney Development (Human/Mouse)</a></li>
-              <li><a href="tutorials/innervation/">LUT Innervation Development (Mouse)</a></li>
-              <li><a href="tutorials/prostate-dev/">Prostate Development (Mouse)</a></li>
-              <li><a href="tutorials/urogenital-dev/">Urogenital Development (Mouse)</a></li>
-              <li><a href="tutorials/void-assay/">Micturition Assessment (Mouse)</a></li>
+              <li><a href="/tutorials/kidney-dev/">Kidney Development (Human/Mouse)</a></li>
+              <li><a href="/tutorials/innervation/">LUT Innervation Development (Mouse)</a></li>
+              <li><a href="/tutorials/prostate-dev/">Prostate Development (Mouse)</a></li>
+              <li><a href="/tutorials/urogenital-dev/">Urogenital Development (Mouse)</a></li>
+              <li><a href="/tutorials/void-assay/">Micturition Assessment (Mouse)</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Consortiums <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="gudmap/">GUDMAP</a></li>
-              <li><a href="rebuildingakidney/">ReBuilding A Kidney (RBK)</a></li>
+              <li><a href="/gudmap/">GUDMAP</a></li>
+              <li><a href="/rebuildingakidney/">ReBuilding A Kidney (RBK)</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="about/">What is ATLAS-D2K?</a></li>
-              <li><a href="publications/">Publications</a></li>
-              <li><a href="news/">News</a></li>
+              <li><a href="/about/">What is ATLAS-D2K?</a></li>
+              <li><a href="/publications/">Publications</a></li>
+              <li><a href="/news/">News</a></li>
             </ul>
           </li>
         </ul>
