--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -184,11 +184,19 @@ h6 {
 
 figure {
     padding-bottom: 10px;
+    width: 100%;
+    display: block;
+    text-align: center;
 }
 
 figure img {
     border: 1px solid #333;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+
 
 .bg-info,
 .bg-success,
