adding teaser about reference site

--- a/_includes/tease.html
+++ b/_includes/tease.html
@@ -1,1 +1,1 @@
-<a href="/2018/05/30/presentations-videos-annual-meeting/" class="tease">Click for links to photos, slides and videos now available from the 2018 FaceBase Annual Meeting.</a>
+<p class="teaser">PLEASE NOTE: ATLAS-D2K closed July 31, 2025 and this website is for reference purposes only.</p>
