updating for chaise banner

--- a/assets/css/chaise.css
+++ b/assets/css/chaise.css
@@ -210,7 +210,7 @@ nav.navbar .navbar-nav div.dropdown-menu {
 /* ---------- chaise navbar banner style ---------- */
 
 .chaise-navbar-banner-container {
-    background-color: #447CC9;
+    background-color: #FFFFBF;
     /* need to figure out a better color - probably lighter tone */
     /* color: red; */
 }
