Updating references to files to include GH Pages dir

--- a/_includes/carousel-gudmap.html
+++ b/_includes/carousel-gudmap.html
@@ -1,35 +1,35 @@
 <div class="slider" data-slick='{"dots": true}'>
   <div>
-    <a href="/assets/img/carousel/16-WMWC-prostate-mouse-strand.png" class="featured" title="Strand lab (GUDMAP)">
-    <img src="/assets/img/carousel/16-WMWC-prostate-mouse-strand-thumb.png"  alt="/id/16-WMWC">
+    <a href="{{ "/assets/img/carousel/16-WMWC-prostate-mouse-strand.png" | relative_url }}" class="featured" title="Strand lab (GUDMAP)">
+    <img src="{{ "/assets/img/carousel/16-WMWC-prostate-mouse-strand-thumb.png" | relative_url }}"  alt="/id/16-WMWC">
     </a>
   </div>
   <div>
-    <a href="/assets/img/carousel/N-E03T-little-IHC.jpg" class="featured" title="Little lab (GUDMAP)">
-    <img src="/assets/img/carousel/N-E03T-little-IHC-thumb.jpg"  alt="/id/N-GKW0">
+    <a href="{{ "/assets/img/carousel/N-E03T-little-IHC.jpg" | relative_url }}" class="featured" title="Little lab (GUDMAP)">
+    <img src="{{ "/assets/img/carousel/N-E03T-little-IHC-thumb.jpg" | relative_url }}"  alt="/id/N-GKW0">
   </a>
   </div>
   <div>
-    <a href="/assets/img/carousel/mendelsohn-ISH-N-EJET.jpg" class="featured" title="Mendelsohn lab (GUDMAP)">
-    <img src="/assets/img/carousel/mendelsohn-ISH-N-EJET-thumb.jpg"  alt="/id/N-GPZ8">
+    <a href="{{ "/assets/img/carousel/mendelsohn-ISH-N-EJET.jpg" | relative_url }}" class="featured" title="Mendelsohn lab (GUDMAP)">
+    <img src="{{ "/assets/img/carousel/mendelsohn-ISH-N-EJET-thumb.jpg" | relative_url }}"  alt="/id/N-GPZ8">
   </a>
   </div>
 
   <div>
-    <a href="/assets/img/carousel/17-CKXJ-southard-smith-ihc.jpg" class="featured" title="Southard-Smith lab (GUDMAP)">
-    <img src="/assets/img/carousel/17-CKXJ-southard-smith-ihc-thumb.jpg"  alt="/id/17-CKXJ">
+    <a href="{{ "/assets/img/carousel/17-CKXJ-southard-smith-ihc.jpg" | relative_url }}" class="featured" title="Southard-Smith lab (GUDMAP)">
+    <img src="{{ "/assets/img/carousel/17-CKXJ-southard-smith-ihc-thumb.jpg" | relative_url }}"  alt="/id/17-CKXJ">
     </a>
   </div>
 
   <div>
-    <a href="/assets/img/carousel/cohn-brightfield-N-FH8T.jpg" class="featured" title="Cohn lab (GUDMAP)">
-    <img src="/assets/img/carousel/cohn-brightfield-N-FH8T-thumb.jpg"  alt="/id/N-GXM0">
+    <a href="{{ "/assets/img/carousel/cohn-brightfield-N-FH8T.jpg" | relative_url }}" class="featured" title="Cohn lab (GUDMAP)">
+    <img src="{{ "/assets/img/carousel/cohn-brightfield-N-FH8T-thumb.jpg" | relative_url }}"  alt="/id/N-GXM0">
   </a>
   </div>
 
   <div>
-    <a href="/assets/img/carousel/W-QZTE-vezina-ihc.jpg" class="featured" title="Vezina lab (GUDMAP)">
-    <img src="/assets/img/carousel/W-QZTE-vezina-ihc-thumb.jpg"  alt="/id/W-QZT6">
+    <a href="{{ "/assets/img/carousel/W-QZTE-vezina-ihc.jpg" | relative_url }}" class="featured" title="Vezina lab (GUDMAP)">
+    <img src="{{ "/assets/img/carousel/W-QZTE-vezina-ihc-thumb.jpg" | relative_url }}"  alt="/id/W-QZT6">
     </a>
   </div>
 
