--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,39 +5,39 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 col-md-12">
-				<p><a href="/citing/">Citing</a> | <a href="/about/">About</a> | <a href="/terms-of-use/">Terms of Use</a> | <a href="/contact/">Feedback</a> | <a href="/news/">News</a> | <a href="/privacy-policy/">Privacy</a></p>
+				<p><a href="{{ "/citing/" | relative_url }}">Citing</a> | <a href="{{ "/about/" | relative_url }}">About</a> | <a href="{{ "/terms-of-use/" | relative_url }}">Terms of Use</a> | <a href="{{ "/contact/" | relative_url }}">Feedback</a> | <a href="{{ "/news/" | relative_url }}">News</a> | <a href="{{ "/privacy-policy/" | relative_url }}">Privacy</a></p>
 				<p>Supported by grant <strong>1U24DK135157</strong> from the <a href="https://www.niddk.nih.gov/" target="_blank">National Institute of Diabetes and Digestive and Kidney Diseases</a></p>
 			</div>
 		</div>
 		<div class="row acks">
 			<div class="ack-logo">
 				<a href="https://www.isi.edu/">
-					<img src="/assets/img/Informal_Viterbi_CardOnBlack.jpg" alt="Logo for USC Viterbi" height="40px" >
+					<img src="{{ "/assets/img/Informal_Viterbi_CardOnBlack.jpg" | relative_url }}" alt="Logo for USC Viterbi" height="40px" >
 				</a>
 			</div>
 			<div class="ack-logo">
 				<a href="https://www.psc.edu/">
-					<img src="/assets/img/PSClogo.jpg" alt="Logo of the Pittsburgh Super Computing Center" height="40px">
+					<img src="{{ "/assets/img/PSClogo.jpg" | relative_url }}" alt="Logo of the Pittsburgh Super Computing Center" height="40px">
 				</a>
 			</div>
 			<div class="ack-logo">
 				<a href="https://www.brighamandwomens.org/">
-					<img src="/assets/img/BrighamHealth_BWH.png" alt="Logo of Brigham and Women's Hospital" height="50px">
+					<img src="{{ "/assets/img/BrighamHealth_BWH.png" | relative_url }}" alt="Logo of Brigham and Women's Hospital" height="50px">
 				</a>
 			</div>
 			<div class="ack-logo">
 				<a href="https://hms.harvard.edu/">
-					<img src="/assets/img/harvard-teaching-logo.jpeg" alt="Logo of Harvard Medical Teaching College" height="40px">
+					<img src="{{ "/assets/img/harvard-teaching-logo.jpeg" | relative_url }}" alt="Logo of Harvard Medical Teaching College" height="40px">
 				</a>
 			</div>
 			<div class="ack-logo">
 				<a href="https://wustl.edu/">
-					<img src="/assets/img/washu-logo.png" alt="Logo of WashU" height="60px">
+					<img src="{{ "/assets/img/washu-logo.png" | relative_url }}" alt="Logo of WashU" height="60px">
 				</a>
 			</div>
 			<div class="ack-logo">
 				<a href="http://deriva.isrd.isi.edu/">
-					<img src="/assets/img/deriva-dark-bg.png" alt="Logo of the DERIVA system" height="50px">
+					<img src="{{ "/assets/img/deriva-dark-bg.png" | relative_url }}" alt="Logo of the DERIVA system" height="50px">
 				</a>
 			</div>
 		</div>
@@ -64,6 +64,6 @@
 		try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
 		catch(e){window.attachEvent("onload", $buo_f)}
 </script>
-<script src="/assets/js/bootstrap.min.js"></script>
+<script src="{{ "/assets/js/bootstrap.min.js" | relative_url }}"></script>
 </body>
 </html>
