--- a/_layouts/gudmap/projects-groups.html
+++ b/_layouts/gudmap/projects-groups.html
@@ -11,13 +11,13 @@ layout: gudmap/page
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 			GUDMAP4</a>
 			<ul class="dropdown-menu">
-				<li><a href="/gudmap/projects/gudmap4/chen-group/">Chen/Ding Group</a></li>
-				<li><a href="/gudmap/projects/gudmap4/cohn-group/">Cohn Group</a></li>
-				<li><a href="/gudmap/projects/gudmap4/keast-group/">Keast/Osborne Group</a></li>
-				<li><a href="/gudmap/projects/gudmap4/lee-group/">Lee/Ting/Wessely Group</a></li>
-	      <li><a href="/gudmap/projects/gudmap4/li-group/">Sean Li Group</a></li>
-				<li><a href="/gudmap/projects/gudmap4/shibata-group/">Shibata Group</a></li>
-				<li><a href="/gudmap/projects/gudmap4/strand-group/">Strand/Vezina Group</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap4/chen-group/" | relative_url }}">Chen/Ding Group</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap4/cohn-group/" | relative_url }}">Cohn Group</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap4/keast-group/" | relative_url }}">Keast/Osborne Group</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap4/lee-group/" | relative_url }}">Lee/Ting/Wessely Group</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap4/li-group/" | relative_url }}">Sean Li Group</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap4/shibata-group/" | relative_url }}">Shibata Group</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap4/strand-group/" | relative_url }}">Strand/Vezina Group</a></li>
 			</ul>
 
 		</li>
@@ -25,16 +25,16 @@ layout: gudmap/page
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 			GUDMAP3</a>
 			<ul class="dropdown-menu">
-				<li><a href="/gudmap/projects/gudmap3/cohn-group/">Cohn</a></li>
-	      <li><a href="/gudmap/projects/gudmap3/tissue-repo/">Dhir (Tissue Repo)</a></li>
-				<li><a href="/gudmap/projects/gudmap3/keast-group/">Keast</a></li>
-	      <li><a href="/gudmap/projects/gudmap3/hub/">Kesselman (Hub)</a></li>
-	      <li><a href="/gudmap/projects/gudmap3/li-group/">Li</a></li>
-				<li><a href="/gudmap/projects/gudmap3/mcmahon-group/">McMahon</a></li>
-				<li><a href="/gudmap/projects/gudmap3/mendelsohn-group/">Mendelsohn</a></li>
-				<li><a href="/gudmap/projects/gudmap3/southard-smith-group/">Southard-Smith</a></li>
-				<li><a href="/gudmap/projects/gudmap3/strand-group/">Strand</a></li>
-				<li><a href="/gudmap/projects/gudmap3/vezina-group/">Vezina</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap3/cohn-group/" | relative_url }}">Cohn</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap3/tissue-repo/" | relative_url }}">Dhir (Tissue Repo)</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap3/keast-group/" | relative_url }}">Keast</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap3/hub/" | relative_url }}">Kesselman (Hub)</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap3/li-group/" | relative_url }}">Li</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap3/mcmahon-group/" | relative_url }}">McMahon</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap3/mendelsohn-group/" | relative_url }}">Mendelsohn</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap3/southard-smith-group/" | relative_url }}">Southard-Smith</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap3/strand-group/" | relative_url }}">Strand</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap3/vezina-group/" | relative_url }}">Vezina</a></li>
 			</ul>
 
 		</li>
@@ -42,40 +42,40 @@ layout: gudmap/page
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 			GUDMAP2</a>
 			<ul class="dropdown-menu">
-				<li><a href="/gudmap/projects/gudmap2/cohn-group/">Cohn</a></li>
-				<li><a href="/gudmap/projects/gudmap2/edinburgh-group/">Edinburgh Core</a></li>
-				<li><a href="/gudmap/projects/gudmap2/keast-group/">Keast</a></li>
-				<li><a href="/gudmap/projects/gudmap2/mcmahon-group/">McMahon</a></li>
-				<li><a href="/gudmap/projects/gudmap2/mendelsohn-group/">Mendelsohn</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap2/cohn-group/" | relative_url }}">Cohn</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap2/edinburgh-group/" | relative_url }}">Edinburgh Core</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap2/keast-group/" | relative_url }}">Keast</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap2/mcmahon-group/" | relative_url }}">McMahon</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap2/mendelsohn-group/" | relative_url }}">Mendelsohn</a></li>
 			</ul>
 		</li>
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 			GUDMAP1</a>
 			<ul class="dropdown-menu">
-				<li><a href="/gudmap/projects/gudmap1/capel-group/">Capel</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/edinburgh-group/">Edinburgh Core</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/gaido-group/">Gaido</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/lessard-group/">Lessard</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/little-group/">Little</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/mcmahon-group/">McMahon</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/mendelsohn-group/">Mendelsohn</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/potter-group/">Potter</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/southard-smith-group/">Southard-Smith</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/vezina-group/">Vezina</a></li>
-	      <li><a href="/gudmap/projects/gudmap1/zhang-group/">Zhang</a></li>
+				<li><a href="{{ "/gudmap/projects/gudmap1/capel-group/" | relative_url }}">Capel</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/edinburgh-group/" | relative_url }}">Edinburgh Core</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/gaido-group/" | relative_url }}">Gaido</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/lessard-group/" | relative_url }}">Lessard</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/little-group/" | relative_url }}">Little</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/mcmahon-group/" | relative_url }}">McMahon</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/mendelsohn-group/" | relative_url }}">Mendelsohn</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/potter-group/" | relative_url }}">Potter</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/southard-smith-group/" | relative_url }}">Southard-Smith</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/vezina-group/" | relative_url }}">Vezina</a></li>
+	      <li><a href="{{ "/gudmap/projects/gudmap1/zhang-group/" | relative_url }}">Zhang</a></li>
 			</ul>
 		</li>
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 			nGUDMAP</a>
 			<ul class="dropdown-menu">
-				<li><a href="/gudmap/projects/ngudmap/ahern-group/">Ahern</a></li>
-				<li><a href="/gudmap/projects/ngudmap/baldock-group/">Baldock</a></li>
-				<li><a href="/gudmap/projects/ngudmap/edinburgh-group/">Edinburgh Core</a></li>
-				<li><a href="/gudmap/projects/ngudmap/jain-group/">Jain</a></li>
-				<li><a href="/gudmap/projects/ngudmap/keast-group/">Keast</a></li>
-				<li><a href="/gudmap/projects/ngudmap/southard-smith-group/">Southard-Smith</a></li>
+				<li><a href="{{ "/gudmap/projects/ngudmap/ahern-group/" | relative_url }}">Ahern</a></li>
+				<li><a href="{{ "/gudmap/projects/ngudmap/baldock-group/" | relative_url }}">Baldock</a></li>
+				<li><a href="{{ "/gudmap/projects/ngudmap/edinburgh-group/" | relative_url }}">Edinburgh Core</a></li>
+				<li><a href="{{ "/gudmap/projects/ngudmap/jain-group/" | relative_url }}">Jain</a></li>
+				<li><a href="{{ "/gudmap/projects/ngudmap/keast-group/" | relative_url }}">Keast</a></li>
+				<li><a href="{{ "/gudmap/projects/ngudmap/southard-smith-group/" | relative_url }}">Southard-Smith</a></li>
 			</ul>
 		</li>
 	</ul>
