--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
     	{{ content }}
 
      <div class="news-link">
- 			<a href="/news/">See all news</a>
+ 			<a href="{{ "/news/" | relative_url }}">See all news</a>
  		</div>
 
 </div>
