--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,26 +2,26 @@
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
-    <script src="/gtm-id.js"></script>
+    <script src="{{ "/gtm-id.js" | relative_url }}"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/94587e2b79.js" crossorigin="anonymous"></script>
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/css/bootstrap.min.css"
+      href="{{ "/assets/css/bootstrap.min.css" | relative_url }}"
       />
-    <link rel="stylesheet" type="text/css" href="/assets/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/slick/slick.css" | relative_url }}" />
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/slick/slick-theme.css"
+      href="{{ "/assets/slick/slick-theme.css" | relative_url }}"
       />
-    <link rel="stylesheet" type="text/css" href="/assets/css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/css/custom.css" | relative_url }}" />
     {% if page.custom_css %} {% for css_file in page.custom_css %}
     <script src='/assets/css/{{ css_file }}.css' type="text/css"></script>
     {% endfor %} {% endif %}
-    <script src="/assets/js/jquery-latest.min.js"></script>
+    <script src="{{ "/assets/js/jquery-latest.min.js" | relative_url }}"></script>
 
     {% if page.custom_js %} {% for js_file in page.custom_js %}
     <script src='/assets/js/{{ js_file }}.js' type="text/javascript"></script>
