--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,4 +12,4 @@
 </div>
 
 {% include footer.html %}
-<script type="text/javascript" src="/assets/slick/slick.min.js"></script>
+<script type="text/javascript" src="{{ "/assets/slick/slick.min.js" | relative_url }}"></script>
