--- a/_layouts/gudmap-sub.html
+++ b/_layouts/gudmap-sub.html
@@ -1,13 +1,13 @@
 {% include header.html %}
-<link rel="stylesheet" href="/assets/css/gudmap.css">
+<link rel="stylesheet" href="{{ "/assets/css/gudmap.css" | relative_url }}">
 <div class="gudmap-subnav">
-	<a class="gudmap-brand" href="/gudmap/">
-        <img alt="gudmap Logo" src="/assets/img/gudmap-logo.svg">
+	<a class="gudmap-brand" href="{{ "/gudmap/" | relative_url }}">
+        <img alt="gudmap Logo" src="{{ "/assets/img/gudmap-logo.svg" | relative_url }}">
       </a>
 			<ul>
-					<li role="presentation"><a href="/gudmap/about/">About</a></li>
-					<li role="presentation"><a href="/gudmap/projects/">Projects</a></li>
-					<li role="presentation"><a href="/contact/">Contact</a></li>
+					<li role="presentation"><a href="{{ "/gudmap/about/" | relative_url }}">About</a></li>
+					<li role="presentation"><a href="{{ "/gudmap/projects/" | relative_url }}">Projects</a></li>
+					<li role="presentation"><a href="{{ "/contact/" | relative_url }}">Contact</a></li>
 			</ul>
 </div>
 <div class="container" id="content">
@@ -19,4 +19,4 @@
 </div>
 {% include footer.html %}
 </div>
-<script type="text/javascript" src="/assets/slick/slick.min.js"></script>
+<script type="text/javascript" src="{{ "/assets/slick/slick.min.js" | relative_url }}"></script>
