more url updates

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="{{ "/" | relative_url }}">
         <span id="brand-text">ATLAS-D2K</span></a>
       </div>
 
