--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -70,7 +70,7 @@ nav.navbar.navbar-inverse {
 span#brand-text {
     display: block;
     height: 98px;
-    background: url(/assets/img/atlas-logo-inverted.png);
+    background: url(https://informatics-isi-edu.github.io/atlas-d2k-www/assets/img/atlas-logo-inverted.png);
   /*  background-size: cover; */
     background-size: 120px 83px;
     background-repeat: no-repeat;
@@ -370,7 +370,7 @@ p.cta {
     text-align: center;
     margin: 0 auto;
     /*  background: rgba(22, 22, 30, 0.5) !important;*/
-    background-image: url("/assets/img/carousel/16-WMWC-prostate-mouse-strand.png");
+    background-image: url("https://informatics-isi-edu.github.io/atlas-d2k-www/assets/img/carousel/16-WMWC-prostate-mouse-strand.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
