--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -18,14 +18,13 @@
       href="{{ "/assets/slick/slick-theme.css" | relative_url }}"
       />
     <link rel="stylesheet" type="text/css" href="{{ "/assets/css/custom.css" | relative_url }}" />
-    {% if page.custom_css %} {% for css_file in page.custom_css %}
-    <script src='/assets/css/{{ css_file }}.css' type="text/css"></script>
-    {% endfor %} {% endif %}
+
+    <script src="{{ "/assets/css/colorbox.css" | relative_url }}" type="text/css"></script>
     <script src="{{ "/assets/js/jquery-latest.min.js" | relative_url }}"></script>
-    
-    {% if page.custom_js %} {% for js_file in page.custom_js %}
-    <script src='/assets/js/{{ js_file }}.js' type="text/javascript"></script>
-    {% endfor %} {% endif %}
+    <script src="{{ "/assets/js/home-stat-queries.js" | relative_url }}" type="text/javascript"></script>
+    <script src="{{ "/assets/js/jquery.colorbox.js" | relative_url }}" type="text/javascript"></script>
+
+
 
     <!-- JSON-LD tags -->
   	{% if page.layout == "home" %}
