--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,12 +19,12 @@
       />
     <link rel="stylesheet" type="text/css" href="{{ "/assets/css/custom.css" | relative_url }}" />
     {% if page.custom_css %} {% for css_file in page.custom_css %}
-    <script src='/assets/css/{{ css_file }}.css' type="text/css"></script>
+    <script src='/atlas-d2k-www/assets/css/{{ css_file }}.css' type="text/css"></script>
     {% endfor %} {% endif %}
     <script src="{{ "/assets/js/jquery-latest.min.js" | relative_url }}"></script>
 
     {% if page.custom_js %} {% for js_file in page.custom_js %}
-    <script src='/assets/js/{{ js_file }}.js' type="text/javascript"></script>
+    <script src='/atlas-d2k-www/assets/js/{{ js_file }}.js' type="text/javascript"></script>
     {% endfor %} {% endif %}
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
